--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <form action="#" method="get">
         <input type="button" value="Enviar">
+        <input type="checkbox" name="micheck" id="">
     </form>
 </body>
 </html>
