--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <form action="#" method="get">
         <input type="button" value="Enviar">
-        <input type="checkbox" name="micheck" id="">
+        <input type="checkbox" name="mi_check" id="">
     </form>
 </body>
 </html>
