--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <form action="#" method="get">
         <input type="button" value="Enviar">
         <input type="checkbox" name="mi_check2" id="">
+        <input type="date" name="fecha" id="">
     </form>
 </body>
 </html>
