--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <input type="text">
         <input type="color" name="Color" id="">
         <input type="date" name="fecha" id="">
+        <video src="asdf"></video>
     </form>
 </body>
 </html>
